# WBTech_rust

./: Cargo.toml  README.md
l0/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
l0/http/: create_order.http  get_order.http
l0/migrations/: 20240902164357_init.down.sql  20240902164357_init.up.sql
l0/src/: endpoints.rs  lib.rs  main.rs  models.rs  queries.rs
l1/: Cargo.toml  README.md  task1.rs  task17.rs  task19.rs  task24.rs  task3.rs
l1/src/: task10.rs  task11.rs  task12.rs  task13.rs  task14.rs  task15.rs  task16.rs  task18.rs  task2.rs  task20.rs  task21.rs  task22.rs  task23.rs  task4.rs  task5.rs  task6.rs  task7.rs  task8.rs  task9.rs
l2/: Cargo.toml  README.md
l2/files/: input.txt  song.txt
l2/src/: task1.rs  task10.rs  task12.rs  task13.rs  task14.rs  task15.rs  task16.rs  task2.rs  task3.rs  task4.rs  task5.rs  task6.rs  task7.rs  task8.rs  task9.rs
l2/src/task11/: Cargo.toml  README.md
l2/src/task11/http/: create_event.http  delete_event.http  events_for_day.http  events_for_month.http  events_for_week.http  update_event.http
l2/src/task11/src/: api_response.rs  endpoints.rs  lib.rs  main.rs  middleware.rs  models.rs  services.rs
l3/: README.md
l3/mini-social-network/: .env  Cargo.toml  README.md
l3/mini-social-network/http/: create_post.http  delete_post.http  get_post.http  like_post.http  login.http  register.http
l3/mini-social-network/migrations/: 20241018124638_init.down.sql  20241018124638_init.up.sql
l3/mini-social-network/src/: api_response.rs  auth.rs  handlers.rs  lib.rs  main.rs  models.rs
l3/mini-social-network/src/auth/: key.rs  models.rs
l3/mini-social-network/src/handlers/: posts.rs
l3/mini-social-network/src/models/: post.rs  user.rs
l3/multi-user-chat/: Cargo.toml  README.md
l3/multi-user-chat/src/: api_response.rs  handlers.rs  lib.rs  main.rs  models.rs
l3/rust-cli/: Cargo.toml  README.MD
l3/rust-cli/src/: lib.rs  main.rs
l3/task-manager/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
l3/task-manager-system/: Cargo.toml  README.md
l3/task-manager-system/src/: lib.rs  main.rs
l3/task-manager/http/: get_task.http  new_task.http  notifications.http  task_complete.http
l3/task-manager/migrations/: 20241005165245_init.up.sql
l3/task-manager/src/: handlers.rs  lib.rs  main.rs  models.rs  notifications.rs
src/: main.rs
