[package]
name = "wb_tech_rust"
version = "0.1.0"
edition = "2021"

[dependencies]

[[example]]
name="l1-task1"
path = "l1/task1.rs"

[[example]]
name="l1-task2"
path = "l1/task2.rs"

[[example]]
name="l1-task3"
path = "l1/task3.rs"

[[example]]
name="l1-task19"
path = "l1/task19.rs"

[[example]]
name="l1-task23"
path = "l1/task23.rs"

[[example]]
name="l1-task24"
path = "l1/task24.rs"