[package]
name = "l1"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4.3"
dashmap = "6.0.1"
tokio = { version = "1.40", features = ["full"] }
flume = "0.11.0"
tokio-util = "0.7.11"

[[example]]
name="l1-task1"
path = "src/task1.rs"

[[example]]
name="l1-task2"
path = "src/task2.rs"

[[example]]
name="l1-task3"
path = "src/task3.rs"

[[example]]
name="l1-task4"
path = "src/task4.rs"

[[example]]
name="l1-task5"
path = "src/task5.rs"

[[example]]
name="l1-task6"
path = "src/task6.rs"

[[example]]
name="l1-task7"
path = "src/task7.rs"

[[example]]
name="l1-task8"
path = "src/task8.rs"

[[example]]
name="l1-task9"
path = "src/task9.rs"

[[example]]
name="l1-task10"
path = "src/task10.rs"

[[example]]
name="l1-task11"
path = "src/task11.rs"

[[example]]
name="l1-task12"
path = "src/task12.rs"

[[example]]
name="l1-task13"
path = "src/task13.rs"

[[example]]
name="l1-task14"
path = "src/task14.rs"

[[example]]
name="l1-task15"
path = "src/task15.rs"

[[example]]
name="l1-task16"
path = "src/task16.rs"

[[example]]
name="l1-task17"
path = "src/task17.rs"

[[example]]
name="l1-task18"
path = "src/task18.rs"

[[example]]
name="l1-task19"
path = "src/task19.rs"

[[example]]
name="l1-task20"
path = "src/task20.rs"

[[example]]
name="l1-task21"
path = "src/task21.rs"

[[example]]
name="l1-task22"
path = "src/task22.rs"

[[example]]
name="l1-task23"
path = "src/task23.rs"

[[example]]
name="l1-task24"
path = "src/task24.rs"