[package]
name = "l2"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rayon = "1"

serde = "1"
serde_json = "1"

reqwest = "0.12.7"
scraper = "0.20"
tokio = { version = "1", features = ["full"] }

[[example]]
name="l2-task1"
path = "src/task1.rs"

[[example]]
name="l2-task2"
path = "src/task2.rs"

[[example]]
name="l2-task3"
path = "src/task3.rs"

[[example]]
name="l2-task4"
path = "src/task4.rs"

[[example]]
name="l2-task5"
path = "src/task5.rs"

[[example]]
name="l2-task6"
path = "src/task6.rs"

[[example]]
name="l2-task7"
path = "src/task7.rs"

[[example]]
name="l2-task9"
path = "src/task9.rs"

[[example]]
name="l2-task10"
path = "src/task10.rs"

[[example]]
name="l2-task12"
path = "src/task12.rs"

[[example]]
name="l2-task13"
path = "src/task13.rs"

[[example]]
name="l2-task14"
path = "src/task14.rs"

[[example]]
name="l2-task15"
path = "src/task15.rs"

[[example]]
name="l2-task16"
path = "src/task16.rs"
