[package]
name = "mini-social-network"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = {version = "0.9.4", features = ["typed-header"]}
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
deadpool-postgres = { version = "0.14.0", features = ["serde"] }

uuid = { version = "1.11.0", features = ["v4", "serde"] }
jsonwebtoken = "9.3"
once_cell = "1.20.1"
chrono = "0.4.38"
dotenv = "0.15"