[package]
name = "multi-user-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6.1.0"
tower = "0.5.1"

[profile.release]
opt-level = 3
lto = "fat"
debug = false
strip = true
